--- a/index.html
+++ b/index.html
@@ -366,10 +366,172 @@ canvas{width:100%;height:200px;background:#fff;border-radius:12px;border:1px sol
     border-bottom: 1px solid var(--border);
     background: transparent; /* No more ugly white box */
 }
-#time-status-nav, #fuel-status-nav {
-    font-size: 13px;
-    font-weight: bold;
-    margin-bottom: 4px;
+
+
+/* Settings Tab Styles */
+.settings-grid {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+}
+
+.settings-group {
+    padding: 20px;
+    border: 1px solid var(--border);
+    border-radius: 12px;
+    background: var(--panel);
+}
+
+.settings-group h4 {
+    margin: 0 0 15px 0;
+    color: var(--accent);
+    font-size: 14px;
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
+.settings-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 12px 0;
+    border-bottom: 1px solid var(--border);
+}
+
+.settings-item:last-child {
+    border-bottom: none;
+}
+
+.settings-label {
+    color: var(--text);
+    font-size: 14px;
+    flex: 1;
+}
+
+.settings-value {
+    color: var(--dim);
+    font-size: 14px;
+}
+
+.settings-select {
+    background: var(--input);
+    color: var(--text);
+    border: 1px solid var(--border);
+    border-radius: 8px;
+    padding: 8px 12px;
+    font-size: 14px;
+    min-width: 150px;
+}
+
+.btn-settings {
+    background: var(--accent);
+    color: white;
+    border: none;
+    border-radius: 8px;
+    padding: 8px 16px;
+    font-size: 14px;
+    cursor: pointer;
+    transition: background 0.2s;
+}
+
+.btn-settings:hover {
+    background: #0074e9;
+}
+
+.btn-danger {
+    background: var(--error);
+    color: white;
+    border: none;
+    border-radius: 8px;
+    padding: 8px 16px;
+    font-size: 14px;
+    cursor: pointer;
+    transition: background 0.2s;
+}
+
+.btn-danger:hover {
+    background: #ff2a1c;
+}
+
+.danger-zone {
+    border-color: var(--error);
+    background: rgba(255, 59, 48, 0.05);
+}
+
+.settings-input-group {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+
+.settings-modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 10000;
+    backdrop-filter: blur(10px);
+}
+
+.settings-modal-content {
+    background: var(--panel);
+    border-radius: 16px;
+    padding: 30px;
+    max-width: 400px;
+    width: 90%;
+    max-height: 80vh;
+    overflow-y: auto;
+    border: 1px solid var(--border);
+}
+
+.settings-modal h3 {
+    margin: 0 0 20px 0;
+    color: var(--accent);
+}
+
+.settings-modal-actions {
+    display: flex;
+    gap: 10px;
+    margin-top: 25px;
+}
+
+.settings-modal-actions button {
+    flex: 1;
+    padding: 12px;
+    border-radius: 10px;
+    border: none;
+    font-weight: 600;
+    cursor: pointer;
+}
+
+.settings-modal-actions .btn-confirm {
+    background: var(--success);
+    color: white;
+}
+
+.settings-modal-actions .btn-cancel {
+    background: var(--input);
+    color: var(--text);
+    border: 1px solid var(--border);
+}
+
+/* Toast Animations */
+@keyframes slideIn {
+    from { transform: translateX(100%); opacity: 0; }
+    to { transform: translateX(0); opacity: 1; }
+}
+
+@keyframes slideOut {
+    from { transform: translateX(0); opacity: 1; }
+    to { transform: translateX(100%); opacity: 0; }
 }
 </style>
 </head>
@@ -388,7 +550,7 @@ canvas{width:100%;height:200px;background:#fff;border-radius:12px;border:1px sol
 
 <div class="efb-wrapper">
     <aside class="sidebar">
-        <div class="sidebar-header">EFB Log Pro <span id="app-version-display"></span></div>
+        <div class="sidebar-header">EFB Log Pro</span></div>
     <div class="nav-menu">
         <button class="nav-btn active" data-tab="summary">Flight Summary</button>
         <button class="nav-btn" data-tab="weights-fuel">Weights & Fuel</button>
@@ -399,6 +561,7 @@ canvas{width:100%;height:200px;background:#fff;border-radius:12px;border:1px sol
         <button class="nav-btn" data-tab="paper">Paper Flight Plan</button>
         <button class="nav-btn" data-tab="journey">Journey Log</button>
         <button class="nav-btn" data-tab="confirm">OFP Confirm</button>
+        <button class="nav-btn" data-tab="settings">Settings</button>
     </div>
         <div class="sidebar-footer">
             <button class="theme-toggle" onclick="toggleTheme()">Day/Night</button>
@@ -744,6 +907,91 @@ canvas{width:100%;height:200px;background:#fff;border-radius:12px;border:1px sol
                 </div>
             </div>
         </section>
+        <section id="section-settings" class="tool-section">
+        <div class="panel">
+            <h3>Application Settings</h3>
+            <div class="settings-grid">
+                <!-- App Info -->
+                <div class="settings-group">
+                    <h4>ℹ️ App Information</h4>
+                    <div class="settings-item">
+                        <span class="settings-label">Version</span>
+                        <span id="settings-version" class="settings-value">v1.3</span>
+                    </div>
+                    <div class="settings-item">
+                        <span class="settings-label">Last Updated</span>
+                        <span id="settings-updated" class="settings-value">2024-01-15</span>
+                    </div>
+                    <div class="settings-item">
+                        <span class="settings-label">Data Usage</span>
+                        <span id="settings-storage" class="settings-value">Calculating...</span>
+                    </div>
+                    <div class="settings-item">
+                        <span class="settings-label">Support</span>
+                        <a href="mailto:janri.kallas@gmail.com" style="color: var(--accent); text-decoration: none;">Email Support</a>
+                    </div>
+                </div>
+                <!-- Security Settings -->
+                <div class="settings-group">
+                    <h4>🔐 Security</h4>
+                    <div class="settings-item">
+                        <span class="settings-label">Change PIN</span>
+                        <button class="btn-settings" id="btn-change-pin">Change</button>
+                    </div>
+                    <div class="settings-item">
+                        <span class="settings-label">View Audit Log</span>
+                        <button class="btn-settings" id="btn-view-audit">View</button>
+                    </div>
+                    <div class="settings-item">
+                        <span class="settings-label">Auto-lock after</span>
+                        <select id="auto-lock-time" class="settings-select">
+                            <option value="5">5 minutes</option>
+                            <option value="15" selected>15 minutes</option>
+                            <option value="30">30 minutes</option>
+                            <option value="60">60 minutes</option>
+                            <option value="0">Never</option>
+                        </select>
+                    </div>
+                </div>
+
+                <!-- Data Management -->
+                <div class="settings-group">
+                    <h4>📊 Data Management</h4>
+                    <div class="settings-item">
+                        <span class="settings-label">Export All Data</span>
+                        <button class="btn-settings" id="btn-export-data">Export</button>
+                    </div>
+
+                </div>
+
+                <!-- App Configuration -->
+                <div class="settings-group">
+                    <h4>⚙️ App Configuration</h4>
+                    <div class="settings-item">
+                        <span class="settings-label">PDF Preview Quality</span>
+                        <select id="pdf-quality" class="settings-select">
+                            <option value="0.8">Low (Fast)</option>
+                            <option value="1.0" selected>Medium</option>
+                            <option value="1.5">High</option>
+                            <option value="2.0">Maximum</option>
+                        </select>
+                    </div>
+                </div>
+
+                <!-- Dangerous Zone -->
+                <div class="settings-group danger-zone">
+                    <h4 style="color: var(--error);">⚠️ Dangerous Zone</h4>
+                    <p style="color: var(--dim); font-size: 12px; margin-bottom: 15px;">
+                        These actions cannot be undone. Make sure you have backed up important data.
+                    </p>
+                    <div class="settings-item">
+                        <span class="settings-label">Factory Reset</span>
+                        <button class="btn-danger" id="btn-factory-reset">Reset All Data</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     </main>
 </div>
 <script>
@@ -754,6 +1002,6 @@ canvas{width:100%;height:200px;background:#fff;border-radius:12px;border:1px sol
 <script src="pdf-lib.min.js"></script>
 <script src="pdf.min.js"></script>
 <script src="signature_pad.umd.min.js"></script>
-<script src="efb-log-pro.js?v=1.3"></script>
+<script src="efb-log-pro.js?v=1.4"></script>
 </body>
 </html>
